--- a/package.json
+++ b/package.json
@@ -23,6 +23,33 @@
   },
   "homepage": "https://github.com/ostera/vegvisir#readme",
   "dependencies": {
-    "history": "^1.17.0"
+    "babel-eslint": "^6.1.0",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-plugin-transform-function-bind": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.16.1",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-stage-3": "^6.5.0",
+    "babel-runtime": "^6.9.2",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "eslint": "^3.0.0",
+    "exorcist": "^0.4.0",
+    "flow-bin": "^0.25.0",
+    "jest-cli": "^13.0.0",
+    "most": "^1.0.4",
+    "regenerator": "^0.8.46",
+    "static-server": "^2.0.3",
+    "uglify-js": "^2.6.4"
+  },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "reactify"
+    ]
   }
 }
